--- a/client/assets/css/kitties_style.css
+++ b/client/assets/css/kitties_style.css
@@ -213,7 +213,7 @@
     height: 20px;
     width: 15px;
     position: absolute;
-    left: 86px;
+    left: 85px;
     top: -28px;
 }
 
@@ -223,7 +223,7 @@
     height: 20px;
     width: 15px;
     position: relative;
-    left: 97px;
+    left: 96px;
     top: -28px;
 }
 
@@ -241,26 +241,26 @@
     top: -8px;
     margin: -3px;
     position: relative;
-    left: 53px;
+    left: 52px;
     box-shadow: 1px 1px 0px 1px rgb(228, 228, 226);
 }
 
-.left-wiskers{
+.whiskers{
     margin: 26px;
     position: relative;
-    top: -43px;
-    left: -26px;
-    transform: rotate(90deg);
-    font-size: 2rem;
+    font-size: 1rem;
 }
 
-.right-wiskers{
-    margin: 26px;
-    position: relative;
-    top: -44px;
-    left: 9px;
+#left-whisker{
+    left: 7px;
+    top: -30px;
     transform: rotate(90deg);
-    font-size: 2rem;
+}
+
+#right-whisker{
+    transform: scale(1,-1) rotate(90deg);
+    left: -29px;
+    top: -9px;
 }
 
 .tail{
