--- a/client/assets/css/kitties_style.css
+++ b/client/assets/css/kitties_style.css
@@ -106,7 +106,7 @@
     width: 50px;
     position: absolute;
     top: 15px;
-    box-shadow: 1px 1px 0px 1px palegorgb(228, 228, 226);
+    box-shadow: 1px 1px 1px 2px rgb(185, 183, 165);
 }
 
 #inner-left-ear{
