--- a/client/assets/css/animations.css
+++ b/client/assets/css/animations.css
@@ -8,10 +8,29 @@
       transform: rotate(0deg);
     }
     30% {
-      transform: rotate(5deg);
+      transform: rotate(3deg);
     }
     60% {
-      transform: rotate(-5deg);
+      transform: rotate(-3deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+}
+
+.movingEars{
+    animation: moveEars 5s infinite;
+}
+
+@keyframes moveEars {
+    0% {
+      transform: rotate(0deg);
+    }
+    30% {
+      transform: skewY(1deg) skewX(2deg) rotate(1deg);
+    }
+    60% {
+      transform: skewY(-1deg) skewX(-2deg) rotate(-1deg);
     }
     100% {
       transform: rotate(0deg);
