eye animation update

--- a/client/assets/css/animations.css
+++ b/client/assets/css/animations.css
@@ -158,13 +158,13 @@
   0% {
     left: 0px;
   }
-  30% {
+  20%, 37% {
     left: 3px;
   }
-  50% {
+  50%, 60% {
     left: 0px;
   }
-  80% {
+  71%, 88% {
     left: -3px;
   }
   100% {
@@ -180,13 +180,13 @@
   0% {
     left: 16px;
   }
-  30% {
+  20%, 37% {
     left: 23px;
   }
-  50% {
+  50%, 60% {
     left: 16px;
   }
-  80% {
+  71%, 88% {
     left: 9px;
   }
   100% {
