--- a/client/assets/css/factory.css
+++ b/client/assets/css/factory.css
@@ -1,20 +1,20 @@
 .catBox {
-    background-color: #e2efff;
-    border-radius: 10px;
-    padding-top: 50px;
-    padding-left: 50px;
-    padding-bottom: 100px;
+  background-color: #d4c2c7;
+  border-radius: 10px 10px 10px 400px;
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-bottom: 100px;
 }
 
 .cattributes {
     padding: 25px;
-    background-color: #ededed;
+    background-color: white;
     border-radius: 10px;
 }
 
 .dnaDiv {
-    position: absolute;
-    left:20px;
-    bottom: 5px;
-
+  position: absolute;
+  left: -15px;
+  bottom: 5px;
+  font-size: 11px;
 }
