--- a/client/assets/css/page.css
+++ b/client/assets/css/page.css
@@ -12,15 +12,21 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: white;
 }
 
 
 #cyber-font{
   text-align: center;
-  color: #ff2a6d;
+  color: #580b65;
   font-family: defcon;
 
+}
+
+.background-img{
+  background-image:
+  background-position: center;
+  background-attachment: fixed;
 }
 
 header{
@@ -29,7 +35,7 @@ header{
 
 #cyber-font-header{
   text-align: center;
-  color: #ff2a6d;
+  color: #580b65;
   font-family: defcon;
   font-size: 15px;
 }
@@ -42,7 +48,7 @@ header{
 
 #cyber-font-nav{
   text-align: center;
-  color: #ff2a6d;
+  color: white;
   font-family: defcon;
 }
 
@@ -56,7 +62,7 @@ header{
 }
 
 #navigation{
-  background: linear-gradient(black, #29132e);
+  background-color: #7e268e;
 }
 
 
@@ -71,7 +77,7 @@ header{
 }
 
 header{
-  background: linear-gradient(#965b5b, #080408);
+  background: white;
 }
 
 .nav-link{
@@ -82,7 +88,7 @@ header{
 #cyber-font-home{
   font-size: 120px;
   text-align: center;
-  color: #ff2a6d;
+  color: #580b65;
   font-family: defcon;
   /*text-shadow: 0 0 20px;*/
 }
@@ -99,7 +105,7 @@ header{
 #beauty{
   font-size: 30px;
   text-align: center;
-  color: #ff2a6d;
+  color: #580b65;
   font-family: defcon;
 }
 
@@ -108,18 +114,34 @@ header{
   text-align: center;
   color: #05d9eb;
   font-family: kitty;
-  font-size: 90px;
+  font-size: 40px;
 }
 
 
 #top-cell{
-  background-color: #29132e;
+  background: white;
   padding: 50px;
   height: 400px;
 }
 
 
 #middle-cell{
-  background-color: white;
+  background-color: #616363;
   height: 700px;
+  padding-top: 100px;
+  color: #f7f7f7;
+  font-family: sans-serif;
+  text-align: center;
+  padding-left: 75px;
+  padding-right: 75px;
+  font-weight: bold;
+}
+
+
+.footer{
+  text-align: center;
+  background-color: #ffffff;
+  color: black;
+  font-weight: bolder;
+  padding-top: 50px;
 }
