bootstrap modal added

--- a/client/assets/css/kitties_style.css
+++ b/client/assets/css/kitties_style.css
@@ -602,8 +602,9 @@ element.style {
   margin-top: 20px;
 }
 
-#parentKitty{
-  object-fit: contain;
+
+.parent-card{
+  transform: scale(.5);
 }
 
 .modal-content{
