--- a/client/assets/css/kitties_style.css
+++ b/client/assets/css/kitties_style.css
@@ -530,6 +530,14 @@ element.style {
   margin: 50px;
 }
 
+.dadKitty:focus {
+  outline:0;
+}
+
+.momKitty:focus {
+  outline:0;
+}
+
 .momKitty{
   height: 300px;
   width: 450px;
@@ -584,18 +592,6 @@ element.style {
   border-color: #2b0df1 transparent transparent #2b0df1;
 }
 
-.bg-modal{
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  display: none;
-}
-
 .my-breeders{
   width: 100%;
   margin: -60px;
@@ -604,19 +600,17 @@ element.style {
 
 
 .parent-card{
-  transform: scale(.5);
-}
-
-.modal-content{
-  width: 500px;
-  height: 300px;
-  background-color: white;
-  border-radius: 4px;
-  position: relative;
+  transform: scale(.75);
 }
 
 .close{
   position: absolute;
   top: 8px;
   right: 11px;
+}
+
+.parent-cards{
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
