--- a/client/assets/css/kitties_style.css
+++ b/client/assets/css/kitties_style.css
@@ -484,6 +484,8 @@ element.style {
 
 .catGenes{
   color: black;
+  width: 217px;
+  text-align: left;
 }
 
 .cards{
@@ -519,11 +521,14 @@ element.style {
 /*Breed.html*/
 .flexBox-breed{
   display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  left: 164px;
 }
 
 .dadKitty{
   height: 300px;
-  width: 450px;
+  width: 250px;
   border-radius: 32px 32px 32px 32px;
   border-width: 0;
   background-color: #05d9eb;
@@ -540,7 +545,7 @@ element.style {
 
 .momKitty{
   height: 300px;
-  width: 450px;
+  width: 250px;
   border-radius: 32px 32px 32px 32px;
   border-width: 0;
   background-color: #fba5b4;
@@ -617,6 +622,9 @@ element.style {
   left: 20px;
 }
 
-#parentKitty{
+#parentChosen{
   transform: scale(.75);
+  width: 235px;
+  margin: 20px;
+  margin-top: -68px;
 }
