--- a/client/assets/css/animations.css
+++ b/client/assets/css/animations.css
@@ -199,3 +199,41 @@
     left: 16px;
   }
 }
+
+.kittySliding{
+    animation: kittySlide 30s infinite;
+}
+
+@keyframes kittySlide {
+  0% {
+    margin-left: 510px;
+  }
+  20%{
+    margin-top: 0px;
+  }
+  25% {
+    margin-left: 910px;
+    margin-top: -70px;
+  }
+  30% {
+    margin-left: 910px;
+    margin-top: 0px;
+  }
+  50% {
+    margin-left: 510px;
+  }
+  70% {
+    margin-top: 0px;
+  }
+  75% {
+    margin-left: 110px;
+    margin-top: -70px;
+  }
+  80% {
+    margin-left: 110px;
+    margin-top: 0px;
+  }
+  100% {
+    margin-left: 510px;
+  }
+}
