--- a/client/assets/css/kitties_style.css
+++ b/client/assets/css/kitties_style.css
@@ -769,3 +769,9 @@ element.style {
 .child{
   margin-left: -20px;
 }
+
+.childImg{
+  width: 500px;
+  height: 500px;
+  background-color: pink;
+}
