--- a/client/assets/css/kitties_style.css
+++ b/client/assets/css/kitties_style.css
@@ -507,7 +507,7 @@
   background-color: #e5c6ff;
   font-size: 10px;
   color: black;
-  border-radius: 00px 40px 0px 440px;
+  border-radius: 40px 40px 0px 440px;
 }
 
 #myOwnedKitties{
@@ -771,13 +771,24 @@ element.style {
 }
 
 .childImg{
-  width: 500px;
+  width: 390px;
   height: 500px;
   background-color: pink;
-  margin-left: 100px;
-  border-radius: 00px 40px 0px 440px;
+  margin-left: 145px;
+  border-radius: 40px 40px 0px 440px;
 }
 
 #newChild{
-  margin-left: 150px;
+  margin-left: 100px;
+}
+
+.childGenes{
+  margin-left: -50px;
+}
+
+.childData {
+  display: block;
+  margin-top: 40px;
+  margin-left: -155px;
+  font-size: 20px;
 }
