--- a/client/assets/css/animations.css
+++ b/client/assets/css/animations.css
@@ -142,18 +142,23 @@
 }
 
 @keyframes earupanddown {
-  0% {
+  20% {
     transform: rotate(0deg);
   }
   30% {
     transform: skewY(2deg) skewX(3deg) rotate(1deg);
   }
-  60% {
-    transform: skewY(-2deg) skewX(-3deg) rotate(-1deg);
-  }
-  100% {
+  40% {
     transform: rotate(0deg);
   }
+  70% {
+    transform: rotate(0deg);
+  }
+  80% {
+    transform: skewY(-2deg) skewX(-3deg) rotate(-1deg);
+  }
+  90% {
+    transform: rotate(0deg);
 }
 
 .eyesmoving{
