sell kitty update

--- a/client/assets/css/kitties_style.css
+++ b/client/assets/css/kitties_style.css
@@ -801,7 +801,7 @@ element.style {
 
 /*Marketplace.html*/
 
-#currency-field{
+#price-field{
   border: 2px solid #333;
   border-radius: 5px;
   margin: 0 0 7px;
