buy function update

--- a/client/assets/css/kitties_style.css
+++ b/client/assets/css/kitties_style.css
@@ -836,3 +836,13 @@ element.style {
 #priceTitle{
   margin-left: 650px;
 }
+
+.sell-cards{
+  transform: scale(.5);
+}
+
+.flexBox-sell{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  left: 60px;
